<resources>
    <string name="app_name">Marketplace QI</string>
    <string name="product_name">Product Name</string>
    <string name="product_price">Price</string>
    <string name="product_quantity">Quantity</string>
    <string name="product_btn_add">Add</string>
    <string name="product_btn_update">Update</string>
    <string name="product_btn_delete">Delete</string>
    <string name="product_title">Product</string>
    <string name="product_insert_sucessfully">Product added</string>
    <string name="product_error_to_insert">There was an error adding the product</string>
    <string name="product_error_to_delete">There was an error deleting the product</string>
    <string name="product_error_to_update">There was an error updating the product</string>
    <string name="product_deleted_sucessfully">Product deleted</string>
    <string name="product_updated_sucessfully">Product updated</string>
    <string name="label_list_of_products">List of Products</string>
</resources>